traefik-dashboard-security.yaml
apiVersion: traefik.io/v1alpha1 
kind: Middleware
metadata:
  name: auth-headers
  namespace: traefik
spec:
  basicAuth:
    secret: authsecret
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    referrerPolicy: no-referrer
    contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https: data:; connect-src 'self' https:; frame-src 'self' https:; media-src 'self' https:; object-src 'none'; frame-ancestors 'self'; base-uri 'self'; form-action 'self';"
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.devopsgurupro.in`) # Change Hostname as per Your Choice
      kind: Rule
      middlewares:
        - name: auth
          namespace: traefik
      services:
        - kind: TraefikService
          name: api@internal
#  tls:
#    secretName: local-example-com-staging-tls
